Prevent double deletion of shmpools

They are tied to the lifetime of the tiles, so don't also make it
managed by qApp.
BUG:443706